--- a/_config.yml
+++ b/_config.yml
@@ -99,6 +99,8 @@ content:
       - [WeAreDevelopers World Congress 2024 Berlin - Blazingly Fast GenAI App Development using Spring AI](https://www.instagram.com/p/C8B4RBWth1F/) 
       - [OpenSourceNorth 2024 - Saint Paul, MN - USA - Blazingly Fast GenAI App Development using Spring AI](https://www.opensourcenorth.com/)
       - [Michigan Technology Conference 2024 - Pontiac, MI - USA - Creating GenAI Apps in Java with SD4J (Stable Diffusion for Java) and the ONNX Runtime](https://www.mitechcon.org/)
+      - [Build Stuff Lithuania 2024 - Blazingly Fast GenAI App Development Java and Spring AI](https://www.buildstuff.events/speakers)
+      - [Build Stuff Lithuania 2024 - Blazingly Fast GenAI App Development Java and Spring AI](https://www.linkedin.com/posts/buildstuffconf_buildstuffconf-juarezjunior-oracle-activity-7251509877896859649-fKd_/)
       - [Data Science Summit Machine Learning Edition - Creating GenAI Apps in Java with SD4J (Stable Diffusion for Java) and the ONNX Runtime](https://ml.dssconf.pl/#speakers)
       - [Data Science Summit Machine Learning Edition - A Solid Foundation for GenAI Apps - Exploring Architectural Blueprints for LLM Solutions with Java](https://ml.dssconf.pl/#speakers)
       - [DeveloperWeek Latin America 2024 - KEYNOTE - A Solid Foundation for GenAI Apps - Exploring Architectural Blueprints for LLM Solutions with Java](https://www.developerweek.com/latin-america/speakers/)
@@ -107,6 +109,9 @@ content:
       - [BaselOne 2024 - Basel, Switzerland - Langchain4J - An Introduction for Impatient Developers](https://baselone.org/en/baselone-home/)
       - [BaselOne 2024 - LangChain4J - An introduction for impatient developers](https://www.linkedin.com/posts/baselone_langchain4j-java-python-activity-7242442327389085696-1r9A/)
       - [AI Industrial Summit 2024 - Sofia, Bulgaria - A High-Speed Data Ingestion Solution in Java Using MQTT, AMQP, and STOMP](https://www.iotsummit.tech/speakers.html)
+      - [Compass AI Session powered by Bosch - Budapest, Hungary](https://ai.compasstechsummit.com/)
+      - [Compass AI Session powered by Bosch - Budapest, Hungary - The Trinity in GenAI - Spring AI, LangChain4J, and OpenAI](https://crafthub.events/unleashing-the-future-of-ai-at-compass-ai-session-powered-by-bosch/)
+      - [Compass AI Session powered by Bosch - Budapest, Hungary - The Trinity in GenAI - Spring AI, LangChain4J, and OpenAI](https://www.instagram.com/crafthub_events/p/DAiypUFN7n2/?img_index=4)
       - [FND _Tech Conf - Romania - Blazingly Fast GenAI App Development With Java and Spring AI](https://gdg.community.dev/events/details/google-gdg-craiova-presents-fnd-conference-2024/)
       - [DevTalks 2024 Cluj-Napoca - A Solid Foundation for GenAI Apps - Exploring Architectural Blueprints for LLM Solutions with Java](https://www.devtalks.ro/cluj#agenda)
       - [I Love Tech Timisoara 2024 - Blazingly Fast GenAI App Development using Spring AI](https://www.hipo.ro/locuri-de-munca/ilovetech)
@@ -138,7 +143,8 @@ content:
       - [JCON OpenBlend 2023 - Slovenia - A High-Speed Data Ingestion Solution in Java Using MQTT, AMQP, and STOMP](https://slovenia.jcon.one/en/program/item/471-a-high-speed-data-ingestion-solution-in-java-using-mqtt-amqp-and-stomp)
       - [DEVCONF.cz 2023 Czech Republic - Introduction to Kubernetes Operators for Databases](https://devconfcz2023.sched.com/event/1MYfI/introduction-to-kubernetes-operators-for-databases)
       - [Barcelona JUG - Revolutionize Java Database App Development with Java Virtual Threads and Reactive Streams](https://aiven.io/community/forum/t/2023-10-edition-whats-up-with-devrel/671)
-      - [CodeFrenzy 2023 - Poland - Revolutionize Java Database App Development with Reactive Streams and Virtual Threads](https://codefrenzy.pl/#agenda)
+      - [Barcelona JUG - A High-Speed Data Ingestion Service in Java Using MQTT, AMQP, and STOMP](https://www.scribd.com/presentation/758969998/BCNJUG-A-High-Speed-Data-Ingestion-Service-in-Java-Using-MQTT-AMQP-and-STOMP)
+      - [CodeFrenzy 2023 - Poland - Revolutionize Java Database App Development with Reactive Streams and Virtual Threads](https://eventory.cc/event/codefrenzy)
       - [DevOpsDays Medellín 2023 - Colombia - Guía práctica para implementar canalizaciones de DevOps con IaC para sus aplicaciones sin servidor - es-ES](https://devopsdays.io/ponentes-2023-1)
       - [DeveloperWeek Europe 2023 - Revolutionize Java Database App Development with Reactive Streams and Virtual Threads](https://developerweekeurope2023.sched.com/event/1KJWh/revolutionize-java-database-app-development-with-reactive-streams-and-virtual-threads?iframe=no)
       - [TDC Innovation 2023 - Brazil - Revolutionize Java Database App Development with Reactive Streams and Java Virtual Threads](https://thedevconf.com/tdc/2023/connections/trilha-arquitetura-java)
