--- a/_config.yml
+++ b/_config.yml
@@ -104,6 +104,7 @@ content:
       - [Data Science Summit Machine Learning Edition - Creating GenAI Apps in Java with SD4J (Stable Diffusion for Java) and the ONNX Runtime](https://ml.dssconf.pl/#speakers)
       - [Data Science Summit Machine Learning Edition - A Solid Foundation for GenAI Apps - Exploring Architectural Blueprints for LLM Solutions with Java](https://ml.dssconf.pl/#speakers)
       - [DeveloperWeek Latin America 2024 - KEYNOTE - A Solid Foundation for GenAI Apps - Exploring Architectural Blueprints for LLM Solutions with Java](https://www.developerweek.com/latin-america/speakers/)
+      - [DUBJUG - Simplifying Data Access with Jakarta Data for Domain-Driven Design - Dublin, Ireland](https://x.com/RafaDelNero/status/1854981034162667947)
       - [DevConf.CZ 2024 - Brno, Czech Republic - Blazingly Fast GenAI App Development Java and Spring AI](https://pretalx.com/devconf-cz-2024/talk/UQJLNH/)
       - [JavaForum Nord 2024 - Hannover, Germany - The Trinity in GenAI - Spring AI, LangChain4J and OpenAI](https://javaforumnord.de/2024/speaker/)
       - [BaselOne 2024 - Basel, Switzerland - Langchain4J - An Introduction for Impatient Developers](https://baselone.org/en/baselone-home/)
@@ -113,10 +114,13 @@ content:
       - [Compass AI Session powered by Bosch - Budapest, Hungary - The Trinity in GenAI - Spring AI, LangChain4J, and OpenAI](https://crafthub.events/unleashing-the-future-of-ai-at-compass-ai-session-powered-by-bosch/)
       - [Compass AI Session powered by Bosch - Budapest, Hungary - The Trinity in GenAI - Spring AI, LangChain4J, and OpenAI](https://www.instagram.com/crafthub_events/p/DAiypUFN7n2/?img_index=4)
       - [FND _Tech Conf - Romania - Blazingly Fast GenAI App Development With Java and Spring AI](https://gdg.community.dev/events/details/google-gdg-craiova-presents-fnd-conference-2024/)
-      - [DevTalks 2024 Cluj-Napoca - A Solid Foundation for GenAI Apps - Exploring Architectural Blueprints for LLM Solutions with Java](https://www.devtalks.ro/cluj#agenda)
-      - [I Love Tech Timisoara 2024 - Blazingly Fast GenAI App Development using Spring AI](https://www.hipo.ro/locuri-de-munca/ilovetech)
+      - [DevTalks Cluj-Napoca 2024 - Romania - A Solid Foundation for GenAI Apps - Exploring Architectural Blueprints for LLM Solutions with Java](https://www.devtalks.ro/cluj#agenda)
+      - [DevTalks Cluj-Napoca 2024 - Romania - A Solid Foundation for GenAI Apps - Exploring Architectural Blueprints for LLM Solutions with Java](https://www.facebook.com/story.php/?story_fbid=854850083409262&id=100066528344634&_rdr)
+      - [I Love Tech Timisoara 2024 - Romania - Blazingly Fast GenAI App Development using Spring AI](https://www.hipo.ro/locuri-de-munca/ilovetech)
+      - [I Love Tech Timisoara 2024 - Romania - Blazingly Fast GenAI App Development using Spring AI](https://eventsmax.ro/evenimente/i-love-tech-timisoara--373279)
       - [I Love Tech Timisoara 2024 - Accelerating IoT: A High-Speed Data Ingestion Solution in Java](https://www.hipo.ro/locuri-de-munca/ilovetech)        
       - [GeeCon 2023 - Prague, Czech Republic - Unleash the power of your applications with Micronaut and GraalVM](https://2023.geecon.cz/speakers/)
+      - [GeeCon 2023 - Prague, Czech Republic - Unleash the power of your applications with Micronaut and GraalVM](https://2023.geecon.cz/speakers/?id=868)
       - [I Love Tech Bucharest 2024 - The Trinity in GenAI - Spring AI, LangChain4J and OpenAI](https://www.hipo.ro/locuri-de-munca/ilovetech)
       - [Global Software Architecture Summit 2024 - Barcelona, Spain - A Solid Foundation for GenAI Apps - Exploring Architectural Blueprints for LLM Solutions](https://gsas.io/#speakers)
       - [GSAS - Artificial Intelligence Takes Center Stage at the Global Software Architecture Summit 2024](https://apiumhub.com/tech-blog-barcelona/global-software-architecture-summit-2024/)
@@ -133,6 +137,7 @@ content:
       - [Major League Hacking - Hacktoberfest Open-Source Edition - Hands-On Lab: A Java Microservice with GraalVM, Micronaut Data, JDK 17/21/22, and the Oracle Autonomous Database](https://news.mlh.io/mlh-partners-with-digitaloceans-10th-hacktoberfest-for-global-hack-week-open-source-09-01-2023)
       - [DUBJUG 2024 - Dublin, Ireland - Blazingly Fast GenAI App Development using Spring AI](https://ti.to/dublin-java-user-group/2024-oracles-juarez-barbosa-junior)
       - [DUBJUG 2024 - Dublin, Ireland - Creating a GenAI application by combining SD4J and the ONNX Runtime from Java](https://ti.to/dublin-java-user-group/2024-oracles-juarez-barbosa-junior)
+      - [THAT Conference - Wisconsin Dells, USA](https://thatconference.com/tx/2024/)
       - [Porto Tech Hub Conference 2023 - Portugal - Revolutionize Java Database App Development with Reactive Streams and Java Virtual Threads](https://portotechhub.com/conference-2023/schedule/)
       - [Java Day at Andersen Lab - Revolutionize Java Database App Development with Reactive Streams and Virtual Threads](https://www.linkedin.com/posts/andersenpeople_activity-7203324834355789824-E531)
       - [DevOps Institute - SKILup Day Container Orchestration - Introduction to Kubernetes Operators for Databases](https://www.techstrongevents.com/skilup-day-container-orchestration/home#speakers)
@@ -180,15 +185,16 @@ content:
       - [Multi-cloud App Development with Microsoft Azure and Oracle Cloud Infrastructure](https://www.meetup.com/corkdotnetazure/events/290938172/)
       - [Microsoft Loves NodeConf Remote 2021](https://www.nearform.com/blog/microsoft-loves-nodeconf-remote-2021/)
       - [Microsoft Loves NodeConf Remote 2021 - TW](https://twitter.com/NodeConfRemote/status/1449377589752176646)
+      - [GitNation - Talks: Microsoft Azure Developer Relations Team](https://gitnation.com/tags/azure)
       - [Workshop - Static Web Apps with CICD on Azure - GitNation Test.js Summit ](https://portal.gitnation.org/contents/static-web-apps-demo-cicd-deployment-and-test-pipeline-on-azure)
+      - [Test.js Summit - Workshop - Static Web Apps demo – CICD, Deployment and Test Pipeline on Azure - hands-on lab](https://portal.gitnation.org/contents/static-web-apps-demo-cicd-deployment-and-test-pipeline-on-azure)
       - [BRIFW - Brazil Immersive Fashion Week - UOL.com.br - pt-BR](https://ffw.uol.com.br/noticias/moda/confira-a-programacao-completa-da-brazil-immersive-fashion-week/)      
       - [BRIFW - Brazil Immersive Fashion Week - Immersive Talk - Blockchain 101](https://twitter.com/juarezjunior/status/1452949631097257987)  
       - [Microsoft Ignite 2021 - Get to know the dev communities and partners in Ireland](https://learn.microsoft.com/en-us/events/ignite-nov-2021/general/connection-zone/conlc113/)                 
       - [Blockchain on Azure for Developers](https://mktoevents.com/Microsoft+Event/272492/157-GQE-382)             
       - [Microsoft Webinar - Machine Learning at scale with Microsoft and Kainos](https://mktoevents.com/Microsoft+Event/304788/157-GQE-382)
       - [Microsoft Webinar - Cybersecurity Day with Microsoft and Avanade](https://mktoevents.com/Microsoft+Event/308598/157-GQE-382)
-      - [Test.js Summit - Talk - Microsoft Loves Javascript](https://twitter.com/TestJSSummit/status/1459308792785608707)
-      - [Test.js Summit - Workshop - Static Web Apps demo – CICD, Deployment and Test Pipeline on Azure - hands-on lab](https://portal.gitnation.org/contents/static-web-apps-demo-cicd-deployment-and-test-pipeline-on-azure)
+      - [Test.js Summit - Talk - Microsoft Loves Javascript](https://twitter.com/TestJSSummit/status/1459308792785608707)      
       - [Microsoft TechX - Enterprise Blockchain Application Development using Azure Blockchain Service](https://www.microsoftevents.com/profile/web/index.cfm?PKwebID=0x1462051d571&varPage=agenda)
       - [Microsoft TechX - Highlights by Version 1](https://www.version1.com/nw-cld-maz-highlights-from-microsoft-techx-dublin/)
       - [Microsoft TechX - Event Report by Version 1](https://medium.com/version-1/a-day-at-microsoft-techx-dublin-28a7abb71c9c)
@@ -256,8 +262,7 @@ content:
     content: | # this will include new lines to allow paragraphs
       Java, Python, Golang, Javascript, Android
       - [Mastering Observability: A Step-by-Step Guide to OpenTelemetry for Java Developers — Part 1](https://juarezjunior.medium.com/mastering-observability-a-step-by-step-guide-to-opentelemetry-for-java-developers-1f86ed7767dc)
-      - [Mastering Observability: Streamline Java Application Observability with the Oracle JDBC OpenTelemetry Provider — Part 2](https://juarezjunior.medium.com/mastering-observability-streamline-java-application-observability-with-the-oracle-jdbc-79a17759370a)
-      - [Straightforward Data Access with Jakarta Data and the Oracle Database](https://juarezjunior.medium.com/straightforward-data-access-with-jakarta-data-and-the-oracle-database-b789b99e4c9b)
+      - [Mastering Observability: Streamline Java Application Observability with the Oracle JDBC OpenTelemetry Provider — Part 2](https://juarezjunior.medium.com/mastering-observability-streamline-java-application-observability-with-the-oracle-jdbc-79a17759370a)     
       - [Getting started with Oracle’s official contribution to Spring AI](https://juarezjunior.medium.com/get-started-with-oracles-official-contribution-to-spring-ai-253504ca4fd0)
       - [Retrieval-Augmented Generation (RAG) with LangChain4j, OpenAI, and the Oracle Database 23ai](https://juarezjunior.medium.com/retrieval-augmented-generation-rag-with-langchain4j-and-the-oracle-database-23ai-0e09ae2e0d6a)
       - [Retrieval-Augmented Generation (RAG) with Spring AI, Oracle Database 23ai, and OpenAI](https://juarezjunior.medium.com/retrieval-augmented-generation-rag-with-spring-ai-oracle-database-23ai-and-openai-61281b96d18a)
@@ -271,18 +276,19 @@ content:
       - [Developing an Oracle JDBC app with GraalVM Native Image](https://juarezjunior.medium.com/introduction-to-oracle-jdbc-driver-configuration-for-graalvm-native-image-6130e699d03b)
       - [Getting to Know the New Spring JDBC Client with the Oracle Database](https://juarezjunior.medium.com/getting-to-know-the-new-spring-jdbc-client-with-the-oracle-database-bf2dfbca3bf2)
       - [A High-Speed Data Ingestion Microservice in Java Using MQTT, AMQP, and STOMP](https://juarezjunior.medium.com/a-high-speed-data-ingestion-microservice-in-java-using-mqtt-amqp-and-stomp-135724223ae1)
-      - [Java Persistence with Spring Boot 3, Spring Data JPA with Hibernate, and the Oracle Database 23c Free — Developer Release](https://juarezjunior.medium.com/java-persistence-with-spring-boot-3-spring-data-jpa-with-hibernate-and-the-oracle-database-23c-9c0946d4838f)
-      - [Spring Data JDBC with the Oracle Database 23c for Java Developers — Getting Started Guide](https://juarezjunior.medium.com/spring-data-jdbc-with-the-oracle-database-23c-for-java-developers-getting-started-guide-1c4640fc8d27)
+      - [Java Persistence with Spring Boot 3, Spring Data JPA with Hibernate, and the Oracle Database](https://juarezjunior.medium.com/java-persistence-with-spring-boot-3-spring-data-jpa-with-hibernate-and-the-oracle-database-23c-9c0946d4838f)  
       - [The Reactive Streams Ingestion Library — DataLoad Mode](https://juarezjunior.medium.com/the-reactive-streams-ingestion-rsi-library-dataload-mode-8b181a3d4b11)
       - [Using the JdbcTemplate class in Spring with the Oracle Database and UCP](https://juarezjunior.medium.com/using-the-jdbctemplate-in-spring-6-1-x-with-the-oracle-database-and-ucp-d3e4272f1574)
-      - [A Guide to Migrating from HikariCP to Oracle UCP - Universal Connection Pool](https://juarezjunior.medium.com/a-guide-to-migrating-from-hikaricp-to-oracle-ucp-universal-connection-pool-e2f3fb6db2d5)      
-      - [How to send notifications from a Quarkus app to a Telegram Chatbot using Java and the Oracle Database 23c Free — Developer Release](https://medium.com/oracledevs/how-to-send-notifications-from-a-quarkus-app-to-a-telegram-chatbot-using-java-and-the-oracle-6fc6940ac8d5)
+      - [A Guide to Migrating from HikariCP to Oracle UCP - Universal Connection Pool](https://juarezjunior.medium.com/a-guide-to-migrating-from-hikaricp-to-oracle-ucp-universal-connection-pool-e2f3fb6db2d5)            
+      - [Straightforward Data Access with Jakarta Data and the Oracle Database](https://juarezjunior.medium.com/straightforward-data-access-with-jakarta-data-and-the-oracle-database-b789b99e4c9b)      
+      - [DUBJUG - Simplify Data Access with Jakarta Data and Oracle Database - DUBJUG with Otavio Santana](https://www.youtube.com/watch?v=-ENghMK-c0c)
       - [Getting Started with Reactive Relational Database Connectivity and the Oracle R2DBC Driver](https://juarezjunior.medium.com/getting-started-with-r2dbc-reactive-relational-database-connectivity-and-the-oracle-r2dbc-driver-2c50ab1d9e66)
-      - [Introduction to JDBC Reactive Extensions with the Oracle Database 23c Free — Developer Release](https://juarezjunior.medium.com/introduction-to-jdbc-reactive-extensions-with-the-oracle-database-23c-free-developer-release-b5a64ac5d194)
-      - [Simplify Data Access with Jakarta Data and Oracle Database - DUBJUG with Otavio Santana](https://www.youtube.com/watch?v=-ENghMK-c0c)
+      - [Introduction to JDBC Reactive Extensions with the Oracle Database 23c Free — Developer Release](https://juarezjunior.medium.com/introduction-to-jdbc-reactive-extensions-with-the-oracle-database-23c-free-developer-release-b5a64ac5d194)      
       - [The new BOOLEAN data type in Oracle Database 23c with the Oracle JDBC drivers (23c, 21c) — JDBC type compatibility](https://medium.com/oracledevs/the-new-boolean-data-type-in-oracle-database-23c-with-the-oracle-jdbc-drivers-23c-21c-jdbc-f3252b200838)
       - [The new BOOLEAN data type in Oracle Database 23c with PL/SQL and the JDBC Drivers (21c, 23c)](https://juarezjunior.medium.com/the-new-boolean-data-type-in-oracle-database-23c-with-pl-sql-and-the-jdbc-drivers-21c-23c-c83957e7e21e)
       - [Oracle Database 23c Free — Developer Release for Java Developers with Docker on Windows](https://medium.com/oracledevs/oracle-database-23c-free-developer-release-for-java-developers-with-docker-on-windows-b164a7a61a91)
+      - [How to send notifications from a Quarkus app to a Telegram Chatbot using Java and the Oracle Database 23c Free — Developer Release](https://medium.com/oracledevs/how-to-send-notifications-from-a-quarkus-app-to-a-telegram-chatbot-using-java-and-the-oracle-6fc6940ac8d5)
+      - [Spring Data JDBC with the Oracle Database 23c for Java Developers — Getting Started Guide](https://juarezjunior.medium.com/spring-data-jdbc-with-the-oracle-database-23c-for-java-developers-getting-started-guide-1c4640fc8d27)
       - [ODSA for Java Developers (Part 8) — Connecting to Oracle ADB from a Spring Boot 3.0 App with Spring Data JPA on Azure Red Hat OpenShift](https://medium.com/oracledevs/odsa-for-java-developers-part-8-connecting-to-oracle-adb-from-a-spring-boot-3-0-60e5a4393c6f)
       - [ODSA for Java Developers (Part 7) — Connecting to Oracle ADB from a Spring Boot 3.0 App with Spring Data JPA on Azure Container Instances](https://juarezjunior.medium.com/odsa-for-java-developers-part-7-connecting-to-oracle-adb-from-a-spring-boot-3-0-7ac563d117a3)
       - [ODSA for Java Developers (Part 6) — Connecting to Oracle ADB from a Spring Boot 3.0 App with Spring Data JPA on Azure Kubernetes Service](https://juarezjunior.medium.com/odsa-for-java-developers-part-6-connecting-to-oracle-adb-from-a-spring-boot-3-0-acee889bd222)
