--- a/_config.yml
+++ b/_config.yml
@@ -145,7 +145,8 @@ content:
       - [jPrime.io 2023 - Bulgaria - Revolutionize Java Database App Development with Reactive Streams and Virtual Threads](https://jprime.io/agenda/162)
       - [jPrime.io 2023 - Bulgaria - Java Microservices with Helidon, React, and the Oracle Container Engine for Kubernetes](https://jprime.io/agenda/178)
       - [jPrime.io 2023 - Bulgaria](https://www.facebook.com/photo/?fbid=948042613119219)
-      - [JCON OpenBlend 2023 - Slovenia - A High-Speed Data Ingestion Solution in Java Using MQTT, AMQP, and STOMP](https://slovenia.jcon.one/en/program/item/471-a-high-speed-data-ingestion-solution-in-java-using-mqtt-amqp-and-stomp)
+      - [JCON OpenBlend 2023 - Portoroz, Slovenia - A High-Speed Data Ingestion Solution in Java Using MQTT, AMQP, and STOMP](https://slovenia.jcon.one/en/program/item/471-a-high-speed-data-ingestion-solution-in-java-using-mqtt-amqp-and-stomp)
+      - [MakeIT Konferencia 2023 - Portoroz, Slovenia - A High-Speed Data Ingestion Solution in Java Using MQTT, AMQP, and STOMP](https://gitnation.com/contents/azure-static-web-apps-swa-with-azure-devops)
       - [DEVCONF.cz 2023 Czech Republic - Introduction to Kubernetes Operators for Databases](https://devconfcz2023.sched.com/event/1MYfI/introduction-to-kubernetes-operators-for-databases)
       - [Barcelona JUG - Revolutionize Java Database App Development with Java Virtual Threads and Reactive Streams](https://aiven.io/community/forum/t/2023-10-edition-whats-up-with-devrel/671)
       - [Barcelona JUG - A High-Speed Data Ingestion Service in Java Using MQTT, AMQP, and STOMP](https://www.scribd.com/presentation/758969998/BCNJUG-A-High-Speed-Data-Ingestion-Service-in-Java-Using-MQTT-AMQP-and-STOMP)
@@ -186,6 +187,7 @@ content:
       - [Microsoft Loves NodeConf Remote 2021](https://www.nearform.com/blog/microsoft-loves-nodeconf-remote-2021/)
       - [Microsoft Loves NodeConf Remote 2021 - TW](https://twitter.com/NodeConfRemote/status/1449377589752176646)
       - [GitNation - Talks: Microsoft Azure Developer Relations Team](https://gitnation.com/tags/azure)
+      - [GitNation - Talks by Juarez Barbosa Junior](https://gitnation.com/contents/static-web-apps-demo-cicd-deployment-and-test-pipeline-on-azure)
       - [Workshop - Static Web Apps with CICD on Azure - GitNation Test.js Summit ](https://portal.gitnation.org/contents/static-web-apps-demo-cicd-deployment-and-test-pipeline-on-azure)
       - [Test.js Summit - Workshop - Static Web Apps demo – CICD, Deployment and Test Pipeline on Azure - hands-on lab](https://portal.gitnation.org/contents/static-web-apps-demo-cicd-deployment-and-test-pipeline-on-azure)
       - [BRIFW - Brazil Immersive Fashion Week - UOL.com.br - pt-BR](https://ffw.uol.com.br/noticias/moda/confira-a-programacao-completa-da-brazil-immersive-fashion-week/)      
