--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ content:
     layout: text
     content: | # this will include new lines to allow paragraphs
       Developer Relations - Presentations and Customer Engagements     
-      - [DevRel - Sessionize - MOST ACTIVE SPEAKER - 2023 & 2024](https://sessionize.com/juarezjunior) 
+      - [Sessionize - MOST ACTIVE SPEAKER - 2023 & 2024](https://sessionize.com/juarezjunior) 
       - [WeAreDevelopers World Congress 2024 Berlin - Langchain4J - An Introduction for Impatient Developers](https://worldcongress.app.swapcard.com/event/wearedevelopers-world-congress-2024/planning/UGxhbm5pbmdfMjAwMjc2Ng%3D%3D) 
       - [WeAreDevelopers World Congress 2024 Berlin - Langchain4J - An Introduction for Impatient Developers](https://www.linkedin.com/feed/update/urn%3Ali%3Aactivity%3A7205856232060948480/) 
       - [WeAreDevelopers World Congress 2024 Berlin - Blazingly Fast GenAI App Development using Spring AI](https://www.instagram.com/p/C8B4RBWth1F/) 
